--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
     <title>Carte déconnectée PWA</title>
     <meta name="description" content="Carte déconnectée PWA">
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
